# fwdpy11

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  MANIFEST.in  Makefile  README.rst  conf.py  configure  configure.ac  genindex.html  gplheader.txt  gplheader_cpp.txt  index.md  index.rst  intro.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  requirements.txt.in  search.html  searchindex.js  setup.cfg  setup.py  setup.py.in  test.py  test_additive_cpp.py  test_additive_pure_python.py  test_callbacks.py  test_mp.py  test_pickling.py  test_sampling_cf.py  test_sampling_mp.py  test_unpickling.py
cpp/: CMakeLists.txt  _fwdpy11.cc
cpp/demes/: forward_graph.cc
cpp/discrete_demography/: MassMigration.cc  MigrationMatrix.cc  SetDemeSize.cc  SetMigrationRates.cc  SetSelfingRate.cc  exceptions.cc  init.cc
cpp/evolve_population/: _evolvets.cc  init.cc  no_stopping.cc
cpp/functions/: _add_mutation.cc  add_mutation.cc
cpp/fwdpp_types/: DataMatrix.cc  MutationTable.cc  init.cc
cpp/fwdpy11_types/: DiploidGenotype.cc  DiploidMetadata.cc  DiploidPopulation.cc  DiploidVector.cc  GeneticMapUnit.cc  Mutation.cc  MutationVector.cc  PopulationBase.cc  RecordNothing.cc  ts_from_tskit.cc  tsrecorders.cc
cpp/genetic_value_to_fitness/: GSSmo.cc  GaussianStabilizingSelection.cc  GeneticValueIsTrait.cc  GeneticValueToFitnessMap.cc  MultivariateGSSmo.cc  init.cc
cpp/genetic_values/: Additive.cc  DiploidGeneticValue.cc  Multiplicative.cc  PyDiploidGeneticValue.cc  init.cc
cpp/gsl/: gsl_random.cc
cpp/mutation_dominance/: MutationDominance.cc
cpp/regions/: ConstantS.cc  MultivariateGaussianEffects.cc  MutationRegions.cc  RecombinationRegions.cc  Region.cc  Sregion.cc  init.cc
cpp/ts/: DataMatrixIterator.cc  VariantIterator.cc  count_mutations.cc  data_matrix_from_tables.cc  infinite_sites.cc
cpp_neutral_benchmark/: CMakeLists.txt  Makefile.am  README.md  configure.ac  cpp_neutral_benchmark.cc
cpptests/: CMakeLists.txt  Makefile.am  configure.ac  coverage.sh  discrete_demography_fixtures.hpp  discrete_demography_roundtrips.cc  discrete_demography_roundtrips.hpp  discrete_demography_util.cc  discrete_demography_util.hpp  forward_demes_graph_fixtures.cc  forward_demes_graph_fixtures.hpp  fwdpy11_cpp_tests.cc  make_DiscreteDemography.hpp  test_MutationDominance.cc  test_Sregion_from_mvnorm.cc  test_core_genetic_map_regions.cc  test_discrete_demography_stable_sorting_of_events.cc  test_effect_sizes_of_zero.cc  test_evolvets.cc  test_fixation_pruning_during_simulation.cc  test_forward_demes_graph.cc  test_gsl_interfaces.cc  test_gss_classes.cc  test_lowlevel_demographic_events.cc  test_lowlevel_discrete_demography_bad_models.cc  test_lowlevel_discrete_demography_objects.cc  test_site_dependent_genetic_value.cc
cpptests/evolve_discrete_demes/: diploid_pop_fitness.cc  diploid_pop_fitness.hpp  evolvets.cc  index_and_count_mutations.cc  remove_extinct_genomes.cc  remove_extinct_genomes.hpp  remove_extinct_mutations.cc  util.hpp
examples/plugin/: CMakeLists.txt  gvalue_recorder.cc  test_plugin.py
fwdpy11/: CMakeLists.txt  DiploidPopulation.py  DiploidPopulation_avoid_import.py  MlocusPop.py  SlocusPop.py  SlocusPopGeneralMutVec.py  __init__.py  __init__.py.in  __main__.py  _demography.py  _dev.py  _evolve_genomes.py  _evolvets.py  _model_params.py  _regions.py  _sample_timepoints.py  _tables_to_msprime.py  _tables_to_tskit.py  _version.py  _version.py.in  class_decorators.py  custom_genetic_value_decorators.py  demography.py  dev.py  discrete_demography.py  ezparams.py  genetic_map_unit.py  genetic_values.py  internal.py  model_params.py  mutation_dominance.py  regions.py  temporal_samplers.py  wright_fisher.py  wright_fisher_qtrait.py  wright_fisher_ts.py
fwdpy11/_functions/: __init__.py  data_matrix_from_tables.py  import_demes.py  infinite_sites.py  simplify_tables.py
fwdpy11/_monkeypatch/: _data_matrix.py  _diploid_population.py  _table_collection.py
fwdpy11/_types/: __init__.py  data_matrix.py  data_matrix_iterator.py  demographic_model_citation.py  demographic_model_details.py  demography_debugger.py  diploid_population.py  forward_demes_graph.py  model_params.py  new_mutation_data.py  population_mixin.py  table_collection.py  tree_iterator.py  variant_iterator.py
fwdpy11/conditional_models/: __init__.py  _selective_sweep.py  _track_added_mutation.py  _track_mutation.py
fwdpy11/demographic_models/: IM.py  __init__.py  demographic_model_details.py  human.py
fwdpy11/fitness/: __init__.py  fwdpy11_fitness.cc
fwdpy11/src/: _MlocusPop.cc  _Population.cc  _Populations.cc  _SlocusPop.cc  _fwdpy11.cc  _gslrng.cc  _init.cc  _opaque_diploids.cc  _opaque_gametes.cc  _opaque_generalmutvecs.cc  _opaque_mutations.cc  evolve.cc  fwdpp_extensions.cc  fwdpp_types.cc  fwdpy11_fitness.cc  fwdpy11_sampling.cc  fwdpy11_trait_values.cc  fwdpy11_types.cc  fwdpy11_util.cc  fwdpy11_util_add_mutation.cc  fwdpy11_util_add_mutation.hpp  genetic_value_noise.cc  ts.cc  (+21 more)
lib/: CMakeLists.txt
rust/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  EsizeZero.cc  EsizeZero.cpp  MeanFitness.pyx  call_Sregion.cc  common_mako.py  conftest.py  custom_additive.cc  custom_additive.cpp  custom_stateless_genotype.cc  custom_stateless_genotype.cpp  discrete_demography_roundtrips.cc  discrete_demography_roundtrips.cpp  ezparams.py  fixation_properties.cpp  fwdpy11_test_utilities.py  gsl_error.cc  gsl_error.cpp  inherit_noise.cc  inherit_noise.cpp  ll_snowdrift.cc  mean_sel_coeff.pyx  numpy_array_interface.cpp  pickling_composed_classes.cc  pickling_composed_classes.cpp  pickling_cpp.cc  pickling_cpp.cpp  poptools.cc  pyadditive.py  pyadditivegss.py  pygss.py  pynoise.py  quick_pops.py  snowdrift.cc  snowdrift.cpp  snowdrift.py  sregion_cdf.cc  testMultivariateGSSmo.cc  testMultivariateGSSmo.cpp  test_DataMatrix.py  (+85 more)
tests_with_cpp/: CMakeLists.txt  custom_additive.cc  custom_stateless_genotype.cc  gsl_error.cc  ll_snowdrift.cc  test_custom_stateless_fitness.py  test_stateful_fitness.py
(+899 files in other folders)
