[build-system]
# We need setup.cfg support, which setuptools indtroduced in 30.3.0.
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm<8",
    "pybind11[global]==2.11.1",
    "cmake>=3.27.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "fwdpy11/_version.py"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
