[build-system]
# We need setup.cfg support, which setuptools indtroduced in 30.3.0.
requires = [
    "scikit-build-core>=0.3.3",
    "setuptools_scm>=8",
    "pybind11[global]==2.11.1",
    "cmake>=3.27.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "fwdpy11"
authors = [
    {name = "Kevin R. Thornton", email =  "krthornt@uci.edu"}
]
license = {text = "GNU GPL3+"}
description = "Forward-time population genetic simulation in Python"
readme = {file = "README.rst", content-type = "text/x-rst"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version"]
dependencies = [
    "attrs >= 20.3.0",
    "black",
    "numpy < 2.0",
    "scipy",
    "tskit >= 0.5.6",
    "demes ~= 0.2.2",
    "Deprecated",
]
requires-python = ">=3.8, <3.13"

[project.scripts]
fwdpy11 = "fwdpy11.__main__:main"

[project.urls]
Repository = "https://github.com/molpopgen/fwdpy11"
Issues = "https://github.com/molpopgen/fwdpy11/issues"
Documentation = "https://molpopgen.github.io/fwdpy11"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["fwdpy11/_version.py"]

[tool.setuptools_scm]
write_to = "fwdpy11/_version.py"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.cibuildwheel]
environment="PATH=$PATH:/$HOME/.cargo/bin LD_LIBRARY_PATH=fwdpy11"
test-command = "pytest {project}/tests"
test-requires = "pytest msprime hypothesis"
build-frontend = "build"

[tool.cibuildwheel.linux]
build = "cp*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"
before-all = "./deployment/linux_wheels/cibuildwheel.sh"
archs = "x86_64"
# skip = "pp* *musllinux*"
