[metadata]
name = fwdpy11
author = Kevin R. Thornton
author_email = krthornt@uci.edu
license = GNU GPL3+
description = Forward-time population genetic simulation in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/molpopgen/fwdpy11
classifiers = 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = fwdpy11
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    attrs >= 20.3.0 
    black
    numpy
    sparse
    tskit >= 0.3.2
    demes
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    fwdpy11 = fwdpy11.__main__:main

