[metadata]
name = fwdpy11
author = Kevin R. Thornton
author_email = krthornt@uci.edu
license = GNU GPL3+
description = Forward-time population genetic simulation in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/molpopgen/fwdpy11
classifiers = 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8, <3.12
# NOTE: any pinning should also be coordinated
# with requirements.in and doc/requirements.in
# and may require regenerating the .txt files.
install_requires =
    attrs >= 20.3.0 
    black
    intervaltree
    numpy
    scipy
    tskit >= 0.5.6
    demes ~= 0.2.2
setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts =
    fwdpy11 = fwdpy11.__main__:main

[mypy]
files = fwdpy11

[mypy-fwdpy11._fwdpy11.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-sparse.*]
ignore_missing_imports = True
